--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 
 <div id="composedContainer"></div>
 
+  <script src="js/script.js"></script>
+  
 <!-- 版权信息（页面底部） -->
 <footer style="text-align: center; margin-top: 60px; padding-top: 20px; border-top: 1px solid #ccc; color: #999; font-size: 0.9rem;">
   版权所有 © 2025 拼好图工具🛠️ | 由@zyy321168313提供支持
